<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space_background"
    android:orientation="vertical"
    tools:context=".home.ActivitiesOptActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/age_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_size"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/icon_size"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/age_activity"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        android:textSize="18sp"
        android:textStyle="italic"
        app:cornerRadius="@dimen/icon_size"
        app:elevation="@dimen/main_card_elevation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/weight_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_size"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/weight_activity"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        android:textSize="18sp"
        android:textStyle="italic"
        app:backgroundTint="@color/secondary_text"
        app:cornerRadius="@dimen/icon_size"
        app:elevation="@dimen/main_card_elevation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/map_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_size"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/map_activity"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        android:textSize="18sp"
        android:textStyle="italic"
        app:cornerRadius="@dimen/icon_size"
        app:elevation="@dimen/main_card_elevation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/interact_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_size"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="Create Your Own Rocket"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        android:textSize="18sp"
        android:textStyle="italic"
        app:backgroundTint="@color/secondary_text"
        app:cornerRadius="@dimen/icon_size"
        app:elevation="@dimen/main_card_elevation" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/topic_size"
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/large_margin"
            app:srcCompat="@drawable/astro" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/bubble"
            android:gravity="center"
            android:padding="@dimen/margin"
            android:text="@string/astro_speech"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/large_margin"
        android:src="@drawable/ic_home"
        app:backgroundTint="@color/secondary_text"
        app:fabSize="normal"
        app:tint="@color/icons" />


</LinearLayout>


