<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:background="@drawable/space_background"
    android:orientation="vertical"
    android:paddingTop="32dp"
    android:paddingBottom="32dp"
    tools:context=".home.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/earth_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_card_height"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/cardview_shadow_end_color"
        app:cardCornerRadius="@dimen/main_card_radius"
        app:cardElevation="@dimen/main_card_elevation"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/character_size"
                android:layout_height="@dimen/character_size"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/astro_boy" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/character_size"
                android:layout_height="@dimen/character_size"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/earth" />

            <Button
                android:id="@+id/earth_btn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/small_margin"
                android:text="@string/earth_btn"
                android:textAllCaps="false"
                android:textColor="@color/icons"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>




    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/space_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_card_height"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/cardview_shadow_end_color"
        app:cardCornerRadius="@dimen/main_card_radius"
        app:cardElevation="@dimen/main_card_elevation"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/character_size"
                android:layout_height="@dimen/character_size"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/alien" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/character_size"
                android:layout_height="@dimen/character_size"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/mars" />

            <Button
                android:id="@+id/space_btn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/small_margin"
                android:text="@string/space_btn"
                android:textAllCaps="false"
                android:textColor="@color/icons"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/activity_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_size"
        android:layout_margin="@dimen/margin"
        android:text="@string/activity_btn"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/secondary_text" />

</LinearLayout>